# mkl-pardiso-bug

./: README.md  meson.build  test_solve.cpp
.github/workflows/: run-test.yml
